--- a/404.page
+++ b/404.page
@@ -181,7 +181,7 @@ Other search options:
 - [Origins of Innovation: Bakewell & Breeding](/reviews/Bakewell "Branwen 2018"){.backlink-not}
 - [Conscientiousness and online education](/Conscientiousness-and-online-education){.backlink-not}
 - [The Ups and Downs of the Hope Function](/docs/statistics/bayes/1994-falk){.backlink-not}
-- [`/docs/ai/gpt/index`](/docs/ai/gpt/index "'Essays', N/A 2009"){.backlink-not}
+- [`/docs/ai/nn/transformer/gpt/index`](/docs/ai/nn/transformer/gpt/index "'Essays', N/A 2009"){.backlink-not}
 - ["Loyal to the Group of Seventeen’s Story—The Just Man"](/docs/culture/1983-wolfe-thecitadeloftheautarch-thejustman "Wolfe 2018"){.backlink-not}
 - [Charity is not about helping](/Charity-is-not-about-helping){.backlink-not}
 - [Slowing Moore’s Law: How It Could Happen](/Slowing-Moores-Law "Branwen 2012"){.backlink-not}
