+; lots of renaming tags & moving files

--- a/404.page
+++ b/404.page
@@ -91,13 +91,13 @@ Other search options:
 - [Archiving URLs](/Archiving-URLs){.backlink-not}
 - [Choose-Your-Own-Adventure AI Dungeon Games](/CYOA "Branwen 2021"){.backlink-not}
 - [Miscellaneous](/Notes "Branwen 2009"){.backlink-not}
-- [_Evangelion 2.0: The Complete Records Collection_](/docs/eva/2010-crc){.backlink-not}
+- [_Evangelion 2.0: The Complete Records Collection_](/docs/anime/eva/2010-crc){.backlink-not}
 - [Prediction markets](/Prediction-markets){.backlink-not}
 - [Time-lock encryption](/Self-decrypting-files "Branwen 2011"){.backlink-not}
 - [Genetics and Eugenics in Frank Herbert’s Dune-verse](/Dune-genetics "Branwen 2018"){.backlink-not}
 - [CO<sub>2</sub> Coin: Decentralized Carbon Capture Blockchains](/CO2-Coin "Branwen 2021"){.backlink-not}
 - [Wei Dai/Satoshi Nakamoto 2009 Bitcoin emails](/docs/bitcoin/2008-nakamoto "Nakamoto & Dai 2014"){.backlink-not}
-- ["Earth in My Window"](/docs/eva/little-boy/2005-murakami "Murakami & Hoaglund 2012"){.backlink-not}
+- ["Earth in My Window"](/docs/anime/eva/little-boy/2005-murakami "Murakami & Hoaglund 2012"){.backlink-not}
 - [Book Reviews](/reviews/Books "Branwen 2013"){.backlink-not}
 - [How Should We Critique Research?](/Research-criticism "Branwen 2019"){.backlink-not}
 - [Open Questions](/Questions "Branwen 2018"){.backlink-not}
@@ -123,7 +123,7 @@ Other search options:
 - [`/newsletter/2021/06`](/newsletter/2021/06 "‘June 2021 News’, Branwen 2020"){.backlink-not}
 - [Silk Road 1: Theory & Practice](/docs/darknet-markets/index "Branwen 2011"){.backlink-not}
 - [Potassium sleep experiments](/zeo/Potassium "Branwen 2012"){.backlink-not}
-- [June 1996 _NewType_ Interview with Hideaki Anno](/docs/eva/1996-newtype-anno-interview "Anno & Inoue 2012"){.backlink-not}
+- [June 1996 _NewType_ Interview with Hideaki Anno](/docs/anime/eva/1996-newtype-anno-interview "Anno & Inoue 2012"){.backlink-not}
   [Statistical notes](/Statistical-notes){.backlink-not}
 - [Creatine Cognition Meta-analysis](/Creatine "Branwen 2013"){.backlink-not}
 - [Culture is not about Esthetics](/Culture-is-not-about-Esthetics){.backlink-not}
@@ -143,7 +143,7 @@ Other search options:
 - [The "Screwfly Solution" Solution: Bi-Sexuality](/Screwfly){.backlink-not}
 - [Predicting Google closures](/Google-shutdowns "Branwen 2013"){.backlink-not}
 - [`/The-Narrowing-Circle`](/The-Narrowing-Circle){.backlink-not}
-- [The Notenki Memoirs: Studio Gainax And The Men Who Created Evangelion](/docs/eva/2002-takeda-notenkimemoirs "Takeda 2010"){.backlink-not}
+- [The Notenki Memoirs: Studio Gainax And The Men Who Created Evangelion](/docs/anime/eva/2002-takeda-notenkimemoirs "Takeda 2010"){.backlink-not}
 - [Who Wrote The _Death Note_ Script?](/Death-Note-script "Branwen 2009"){.backlink-not}
 - [Rubrication Design Examples](/Red "Branwen 2019"){.backlink-not}
 - [Longevity decision analysis](/Longevity){.backlink-not}
@@ -202,10 +202,10 @@ Other search options:
 - [Fake Journal Club: Teaching Critical Reading](/Fake-Journal-Club "Branwen 2022"){.backlink-not}
 - [Wikipedia resume](/Wikipedia-resume){.backlink-not}
 - [Choosing Software](/Choosing-Software){.backlink-not}
-- ["Otaku Talk"](/docs/eva/little-boy/2004-okada){.backlink-not}
+- ["Otaku Talk"](/docs/anime/eva/little-boy/2004-okada){.backlink-not}
 - [Reasons of State: Why Didn’t Denmark Sell Greenland?](/Greenland "Branwen 2011"){.backlink-not}
 - [Efficient Attention: Breaking The Quadratic Transformer Bottleneck](/notes/Attention "Branwen 2020"){.backlink-not}
-- [May 1997 _AnimeLand_ Interview with Hideaki Anno (English)](/docs/eva/1997-animeland-may-hideakianno-interview-english "Anno 2012"){.backlink-not}
+- [May 1997 _AnimeLand_ Interview with Hideaki Anno (English)](/docs/anime/eva/1997-animeland-may-hideakianno-interview-english "Anno 2012"){.backlink-not}
 - [RNN Metadata for Mimicking Author Style](/RNN-metadata "Branwen 2015"){.backlink-not}
 - [`/docs/japanese/teika`](/docs/japanese/teika){.backlink-not}
 - [Lithium in ground-water and well-being](/Lithium "Branwen 2010"){.backlink-not}
