--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -916,7 +916,7 @@ body.index #markdownBody ul > li:nth-of-type(n+2) {
     text-indent: 0;
     padding: 0;
     overflow: unset;
-    break-inside: avoid-column;
+/*     break-inside: avoid-column; */
 }
 
 .TOC ul ul {
