Implement dynamic line height adjustment

--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -2100,6 +2100,16 @@ if (typeof window.GW == "undefined")
 		}
 		Fired when the browser DOMContentLoaded event fires. Loaded content is
 		the full page itself.
+
+	GW.contentDidInject {
+			source: "DOMContentLoaded"
+			document:
+				The global document object (window.document).
+		}
+		Fired when the browser DOMContentLoaded event fires. “Injected” content
+		is the full page itself.
+
+		(This event is fired immediately after the GW.contentDidLoad event.)
  */
 
 /*****************/
@@ -3266,6 +3276,10 @@ window.addEventListener("DOMContentLoaded", () => {
         		| GW.contentDidLoadEventFlags.isFullPage
         		| GW.contentDidLoadEventFlags.fullWidthPossible)
     });
+    GW.notificationCenter.fireEvent("GW.contentDidInject", {
+    	source: "DOMContentLoaded",
+    	document: document
+	});
 });
 window.addEventListener("load", () => {
     GWLog("window.load", "browser event");
