--- a/includes/inlined-head.html
+++ b/includes/inlined-head.html
@@ -2105,6 +2105,7 @@ if (typeof window.GW == "undefined")
 			source: "DOMContentLoaded"
 			document:
 				The global document object (window.document).
+			mainPageContent: true
 		}
 		Fired when the browser DOMContentLoaded event fires. “Injected” content
 		is the full page itself.
@@ -3289,7 +3290,8 @@ window.addEventListener("DOMContentLoaded", () => {
     });
     GW.notificationCenter.fireEvent("GW.contentDidInject", {
     	source: "DOMContentLoaded",
-    	document: document
+    	document: document,
+    	mainPageContent: true
 	});
 });
 window.addEventListener("load", () => {
