--- a/css/links.css
+++ b/css/links.css
@@ -994,6 +994,15 @@ a[data-link-icon='hoover-institution']::after {
 
     opacity: 0.65;
 }
+
+a[data-link-icon='wandb']::after {
+    --link-icon-size: 0.7em;
+    --link-icon-offset-y: 0.1em;
+    --link-icon-offset-x: 0.15em;
+
+    opacity: 0.7;
+}
+
 /*=------------------=*/
 /*= Wikipedia links. =*/
 /*=------------------=*/
