--- a/css/default.css
+++ b/css/default.css
@@ -5223,11 +5223,10 @@ section.highlight-fading::before {
 /* Citation formatting: ellipsis'd "et al", subscripted date; see /Subscripts & /Lorem#citation-variants */
 /* This is variant #6, 'HORIZONTAL ELLIPSIS/​subscripted year'. */
 /* This relies on the 'citefyInline' pass in Typography.hs: the author ('Foo', or 'Foo & Bar') is put in span.cite-author, the 'et al' joiner (if any) in span.cite-joiner, and the year date in span.cite-date. For 'Foo 2020' or 'Foo & Bar 2020', there is no joiner, only for 'et al'; this lets us replace the et al with an ellipsis while subscripting the year in all cases. */
-.cite-author::after { content: "...";
-                      font-size: 0.65em; }
+.cite-author-plural::after { content: "..."; }
 .cite-date {
     vertical-align: -0.35ex;
-    margin-left: -0.3em;
+    margin-left: -0.05em;
     position: relative;
     display: inline-block;
     font-size: 0.75em;
