Typography: citation finetuning: oldstyle->tabular numbers (looks more regular, larger); +tooltip over '...' (in keeping with site design philosophy that everything should have an explanatory tooltip); strip whitespace from et al (necessary to make '...' regular and remove too much/too little margin whitespace); use THIN SPACE in 'Foo & Bar' to avoid stretching by justification & condense dual-authors more like single/multi

--- a/css/default.css
+++ b/css/default.css
@@ -5226,11 +5226,11 @@ section.highlight-fading::before {
 .cite-author-plural::after { content: "..."; }
 .cite-date {
     vertical-align: -0.35ex;
-    margin-left: -0.05em;
     position: relative;
     display: inline-block;
     font-size: 0.75em;
     line-height: 0.7;
+    font-variant-numeric: tabular-nums;
 }
 /* Much more complicated than simply `display: none;` to try to make copy-paste work normally without hacking the copy-listener. */
 .cite-joiner {
@@ -5241,5 +5241,4 @@ section.highlight-fading::before {
     overflow-wrap: normal;
     white-space: nowrap;
     opacity: 0;
-    margin-left: -0.75ch;
 }
