--- a/templates/default.html
+++ b/templates/default.html
@@ -42,7 +42,7 @@
     $endif$
     $endif$
     <meta name="contact" content="https://www.gwern.net/Links#contact">
-    <link rel="index" title="Gwern.net" href="https://www.gwern.net/index">
+    <link rel="index" title="Gwern.net homepage" href="https://www.gwern.net/index">
     <link href="https://gwern.substack.com/feed" type="application/rss+xml" rel="alternate" title="ATOM/RSS feed of Gwern.net newsletters with additions and links." />
 
     <meta name="twitter:creator" content="gwern">
@@ -137,6 +137,8 @@
         <div id="footer">
           <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="no-icon"><em>Submit Anonymous Feedback</em></a></p>
         </div>
+
+        <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index"></a>
 
       </article>
     </main>
