Rename darkmode.js to dark-mode.js, ditto -inline

--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -1163,7 +1163,7 @@ span.smallcaps {
 /*************/
 /* DARK MODE */
 /*************/
-/*	See /static/js/darkmode.js and /static/css/dark-mode.css; this allows the 
+/*	See /static/js/dark-mode.js and /static/css/dark-mode.css; this allows the 
 	user to toggle at runtime.
  */
  
