--- a/templates/inlined-foot-template.html
+++ b/templates/inlined-foot-template.html
@@ -20,7 +20,7 @@
     <script src="/static/js/collapse.js" defer></script>
 
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
-    <script src="/static/js/darkmode.js" defer></script>
+    <script src="/static/js/dark-mode.js" defer></script>
 
     <!-- Reader Mode theme switcher (lets users toggle distraction-free ‘reader mode’ on and off) -->
     <script src="/static/js/reader-mode.js" defer></script>
